feat: morphig dialog

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -17,5 +17,6 @@
   "Холодильники": "Refrigerators",
   "Компьютеры": "Computers",
   "Мелкая техника для дома": "Small household appliances",
-  "Люди часто ищут": "People often search for"
+  "Люди часто ищут": "People often search for",
+  "som": "Sum"
 }
