--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -16,5 +16,6 @@
   "Телевизоры": "Телевизоры",
   "Холодильники": "Холодильники",
   "Компьютеры": "Компьютеры",
-  "Мелкая техника для дома": "Мелкая техника для дома"
+  "Мелкая техника для дома": "Мелкая техника для дома",
+  "som": "Сум"
 }
