--- a/public/locales/uz/translation.json
+++ b/public/locales/uz/translation.json
@@ -17,5 +17,6 @@
   "Холодильники": "Muzlatgichlar",
   "Компьютеры": "Kompyuterlar",
   "Мелкая техника для дома": "Uyingiz uchun texnikalar",
-  "Люди часто ищут": "Tez-tez qidiriladigan mahsulotlar"
+  "Люди часто ищут": "Tez-tez qidiriladigan mahsulotlar",
+  "som": "So'm"
 }
