feat: generic card for home

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -18,5 +18,6 @@
   "Компьютеры": "Computers",
   "Мелкая техника для дома": "Small household appliances",
   "Люди часто ищут": "People often search for",
-  "som": "Sum"
+  "som": "Sum",
+  "Все": "All"
 }
