--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -17,5 +17,6 @@
   "Холодильники": "Холодильники",
   "Компьютеры": "Компьютеры",
   "Мелкая техника для дома": "Мелкая техника для дома",
-  "som": "Сум"
+  "som": "Сум",
+  "Все": "Все"
 }
