--- a/public/locales/uz/translation.json
+++ b/public/locales/uz/translation.json
@@ -18,5 +18,6 @@
   "Компьютеры": "Kompyuterlar",
   "Мелкая техника для дома": "Uyingiz uchun texnikalar",
   "Люди часто ищут": "Tez-tez qidiriladigan mahsulotlar",
-  "som": "So'm"
+  "som": "So'm",
+  "Все": "Barchasi"
 }
