ref: generic card category page

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -19,5 +19,10 @@
   "Мелкая техника для дома": "Small household appliances",
   "Люди часто ищут": "People often search for",
   "som": "Sum",
-  "Все": "All"
+  "Все": "All",
+  "Shop for your home essentials": "Shop for your home essentials",
+  "Shop gifts by recipient": "Shop gifts by recipient",
+  "Top categories in Kitchen appliances": "Top categories in Kitchen appliances",
+  "Wireless Tech": "Wireless Tech",
+  "Fantastic Finds for Home": "Fantastic Finds for Home"
 }
