--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -18,5 +18,10 @@
   "Компьютеры": "Компьютеры",
   "Мелкая техника для дома": "Мелкая техника для дома",
   "som": "Сум",
-  "Все": "Все"
+  "Все": "Все",
+  "Shop for your home essentials": "Покупайте необходимые товары для дома",
+  "Shop gifts by recipient": "Покупайте подарки по получателю",
+  "Top categories in Kitchen appliances": "Лучшие категории в кухонной технике",
+  "Wireless Tech": "Беспроводные технологии",
+  "Fantastic Finds for Home": "Фантастические находки для дома"
 }
