--- a/public/locales/uz/translation.json
+++ b/public/locales/uz/translation.json
@@ -19,5 +19,10 @@
   "Мелкая техника для дома": "Uyingiz uchun texnikalar",
   "Люди часто ищут": "Tez-tez qidiriladigan mahsulotlar",
   "som": "So'm",
-  "Все": "Barchasi"
+  "Все": "Barchasi",
+  "Shop for your home essentials": "Uy-ro‘zg‘or buyumlarini xarid qiling",
+  "Shop gifts by recipient": "Qabul qiluvchiga ko‘ra sovg‘alarni xarid qiling",
+  "Top categories in Kitchen appliances": "Eng sara oshxona jihozlari",
+  "Wireless Tech": "Simsiz texnologiyalar",
+  "Fantastic Finds for Home": "Uy uchun ajoyib topilmalar"
 }
